// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeCard renders the component with EIP-1559 enabled 1`] = `
<div
  class="fee-card__savings-and-quotes-header"
  data-testid="fee-card__savings-and-quotes-header"
>
  <div
    class="fee-card__savings-and-quotes-row"
  >
    <p
      class="fee-card__savings-text"
    >
      Using the best quote
    </p>
    <div
      class="fee-card__quote-link-container"
    >
      <p
        class="fee-card__quote-link-text"
      >
        6 quotes
      </p>
      <div
        class="fee-card__caret-right"
      >
        <i
          class="fa fa-angle-up"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FeeCard renders the component with EIP-1559 enabled 2`] = `
<div
  class="fee-card__top-bordered-row"
>
  <div
    class="fee-card__row-label"
  >
    <div
      class="fee-card__row-header-text"
    >
      Quote includes a 0.875% MetaMask fee
    </div>
    <div
      class="info-tooltip"
    >
      <div
        class="fee-card__info-tooltip-container"
      >
        <div
          aria-describedby="tippy-tooltip-7"
          class="info-tooltip__tooltip-container"
          data-original-title="null"
          data-tooltipped=""
          style="display: inline;"
          tabindex="0"
        >
          <svg
            viewBox="0 0 10 10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 0C2.2 0 0 2.2 0 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c.4 0 .7.3.7.7s-.3.7-.7.7-.7-.2-.7-.6.3-.8.7-.8zm.7 6H4.3V4.3h1.5V8z"
              fill="#b8b8b8"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeeCard renders the component with initial props 1`] = `
<div
  class="fee-card__savings-and-quotes-header"
  data-testid="fee-card__savings-and-quotes-header"
>
  <div
    class="fee-card__savings-and-quotes-row"
  >
    <p
      class="fee-card__savings-text"
    >
      Using the best quote
    </p>
    <div
      class="fee-card__quote-link-container"
    >
      <p
        class="fee-card__quote-link-text"
      >
        6 quotes
      </p>
      <div
        class="fee-card__caret-right"
      >
        <i
          class="fa fa-angle-up"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FeeCard renders the component with initial props 2`] = `
<div
  class="fee-card__top-bordered-row"
>
  <div
    class="fee-card__row-label"
  >
    <div
      class="fee-card__row-header-text"
    >
      Quote includes a 0.875% MetaMask fee
    </div>
    <div
      class="info-tooltip"
    >
      <div
        class="fee-card__info-tooltip-container"
      >
        <div
          aria-describedby="tippy-tooltip-3"
          class="info-tooltip__tooltip-container"
          data-original-title="null"
          data-tooltipped=""
          style="display: inline;"
          tabindex="0"
        >
          <svg
            viewBox="0 0 10 10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 0C2.2 0 0 2.2 0 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c.4 0 .7.3.7.7s-.3.7-.7.7-.7-.2-.7-.6.3-.8.7-.8zm.7 6H4.3V4.3h1.5V8z"
              fill="#b8b8b8"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
